fix: text in tag alignment

--- a/apps/gauzy/src/app/@shared/table-components/tags-only/tags-only.component.scss
+++ b/apps/gauzy/src/app/@shared/table-components/tags-only/tags-only.component.scss
@@ -7,7 +7,7 @@
     font-weight: 600;
     line-height: 13px;
     letter-spacing: 0em;
-    padding: 3px 8px 4px;
+    padding: 3px 8px;
 }
   
 .tags {
