--- a/apps/gauzy/src/app/@shared/tags/tags-color-input/tags-color-input.component.scss
+++ b/apps/gauzy/src/app/@shared/tags/tags-color-input/tags-color-input.component.scss
@@ -17,7 +17,7 @@
   font-weight: 600;
   line-height: 13px;
   letter-spacing: 0em;
-  padding: 3px 8px 4px;
+  padding: 3px 8px;
 }
 
 input {
